clusters/proxmox-home/system/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "http://oauth2-proxy.longhorn-system.svc.cluster.local/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://longhorn.mgsds.com/oauth2/start?rd=$escaped_request_uri"
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: longhorn-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - longhorn.mgsds.com
  rules:
    - host: longhorn.mgsds.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-oauth2-proxy-ingress
  namespace: longhorn-system
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: longhorn-oauth2-proxy-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - longhorn.mgsds.com
  rules:
    - host: longhorn.mgsds.com
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 80
